--- a/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.css
+++ b/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.css
@@ -1,5 +1,5 @@
 .inputLarge{
-    width: 450px;
+    width: 472px;
     height: 30px;
     display: table-cell; 
     vertical-align: middle;
@@ -7,9 +7,15 @@
 }
 
 .textArea{
-    width: 450px;
+    width: 472px;
     display: table-cell; 
     vertical-align: middle;
     border: 1px solid #ccc;
 
+}
+.inputMedium{
+    width: 230px;
+    display: table-cell; 
+    vertical-align: middle;
+    border: 1px solid #ccc;
 }
