--- a/src/app/modules/menu-layout/components/meters/meters.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters.component.html
@@ -1,13 +1,6 @@
 <h1>Medidores Fisicos</h1>
   
-
-  <!-- inicia modal -->
-  <!-- <app-meters-modal></app-meters-modal> -->
-  <!-- termina modal -->
-
-
-
-<!-- Ecabezado de tabla -->
+  <app-meters-modal></app-meters-modal>
 
 <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{ x: '1150px', y: '240px' }">
   <thead>
@@ -56,11 +49,7 @@
 
 <h1>Medidores Virtuales</h1>
 
-<!-- Inicio Modal -->
-<!-- <app-virtual-meter-modal></app-virtual-meter-modal> -->
-
-<!-- Fin Modal -->
-<!-- Ecabezado de tabla -->
+<app-virtual-meter-modal></app-virtual-meter-modal>
 
 <nz-table [nzData]="listOfDataVM" nzTableLayout="fixed" [nzScroll]="{ x: '1150px', y: '240px' }">
   <thead>
