--- a/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
@@ -6,31 +6,30 @@
       <form  nz-form [formGroup]="validateForm">
 
         <div nz-row class="row-1">
-          <div nzSpan="12" nz-col class="row1-col1">
-            <nz-form-label>Codigo de Medidor</nz-form-label>
+          <div nzSpan="10" nz-col class="row1-col1">
+            <label>Codigo de Medidor</label>
 
             <div nz-row>
               <nz-form-item  nzFlex>
                 <nz-form-control >
-                  <nz-input-group [nzSuffix]="suffixIconSearch">
-                    <input type="text" nz-input placeholder="Busqueda por Id" id="Id" formControlName="codigo"/>
+                  <nz-input-group >
+                    <input style="width: 200px;" type="text" nz-input placeholder="987132112" id="Id" formControlName="codigo"/>
                   </nz-input-group>
-                  <ng-template #suffixIconSearch>
-                    <i nz-icon nzType="search"></i>
-                  </ng-template>
                 </nz-form-control>
                 </nz-form-item>
               </div>
 
           </div>
-          <div nzSpan="12" nz-col class="row1-col2">
+          <div nzOffset="4" nzSpan="10" nz-col class="row1-col2">
             <label>Tipo de Medidor</label>
             <div nz-row>
               <nz-form-item  nzFlex>
                 <nz-form-control>
-                  <nz-radio-group >
-                    <label nz-radio formControlName="medType" [nzValue]="o.value" *ngFor="let o of options">{{ o.label }}</label>
-                  </nz-radio-group>
+                    <nz-select class="inputMedium" formControlName="tipo" nzPlaceHolder="Baja tension, media, alta" nzAllowClear>
+                          <nz-option nzLabel="Baja Tension" nzValue="0"></nz-option>
+                          <nz-option nzLabel="Media Tension" nzValue="1"></nz-option>
+                          <nz-option nzLabel="Alta Tension" nzValue="2"></nz-option>
+                    </nz-select>
                 </nz-form-control>
               </nz-form-item>
             </div>
@@ -38,13 +37,50 @@
           </div>
         </div> 
 
+        <div nz-row>
+          <div nz-col nzSpan="10">
+              <label>SourceID Medidor</label>
+              <div nz-row>
+                  <nz-form-control>
+                      <nz-form-item  nzFlex>
+                          <nz-select class="inputMedium" formControlName="sourceId" nzPlaceHolder="51535498" nzAllowClear>
+                              <!-- <div *ngFor="let data of ListOfSourceId">
+                                  <nz-option [nzLabel]="data.sourceId" [nzValue]="data.sourceId"></nz-option>
+                              </div> -->
+                              <div>
+                                <nz-option [nzLabel]="'example'" [nzValue]="'example'"></nz-option>
+                            </div>
+                          </nz-select>
+                      </nz-form-item>
+                  </nz-form-control>
+
+              </div>
+          </div>
+
+          
+          <div nzOffset="4" nzSpan="10" nz-col class="row7-col2">
+            <label>Punto Medicion</label>
+            <div nz-row>
+              <nz-form-item  nzFlex>
+                <nz-form-control>
+                  <nz-select class="inputMedium" formControlName="puntoMedicionId" nzPlaceHolder="Baja tension, media, alta" nzAllowClear>
+                        <nz-option nzLabel="example" nzValue="example"></nz-option>
+                  </nz-select>
+                </nz-form-control>
+              </nz-form-item>
+            </div>
+    
+        </div>
+
+      </div>
+
         <div nz-row class="row-2">
           <div nzSpan="24" nz-col class="row2-col1">
             <label>Descripción</label>
             <div nz-row>
               <nz-form-item>
                 <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="descripcion" [disabled]="false" />
+                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="descripcion"  />
                 </nz-form-control>
               </nz-form-item>
             </div>
@@ -58,7 +94,7 @@
             <div nz-row>
               <nz-form-item>
                 <nz-form-control>
-                  <input class="inputLarge" nz-input id="Serie" type="text" placeholder="Medidor principal" formControlName="serie" [disabled]="false" />
+                  <input class="inputLarge" nz-input id="Serie" type="text" placeholder="098U23" formControlName="serie"  />
                 </nz-form-control>
               </nz-form-item>
             </div>
@@ -67,20 +103,6 @@
           </div>
         </div>
 
-        <!-- <div nz-row class="row-4">
-          <div nzSpan="24" nz-col class="row4-col1">
-            <label>Tipo</label>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="Descripcion" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-
-
-          </div>
-        </div> -->
         <div nz-row class="row-5">
           <div nzSpan="24" nz-col class="row5-col1">
             <label>Modelo</label>
@@ -88,7 +110,7 @@
             <div nz-row>
               <nz-form-item  nzFlex>
                 <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="modelo" [disabled]="false" />
+                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="MD091" formControlName="modelo"  />
                 </nz-form-control>
               </nz-form-item>
             </div>
@@ -96,40 +118,29 @@
 
           </div>
         </div>
-        <!-- <div nz-row class="row-6">
-          <div nzSpan="24" nz-col class="row6-col1">
-            <label>Direccion IP</label>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="Descripcion" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-            
-
-          </div>
-        </div> -->
         <div nz-row class="row-7">
-          <div nzSpan="12" nz-col class="row7-col1">
+          <div nzSpan="11" nz-col class="row7-col1">
             <label>Lectura Maxima</label>
             <div nz-row>
               <nz-form-item  nzFlex>
                 <nz-form-control>
-                  <input nz-input id="Descripcion" type="number" placeholder="Medidor sin etiqueta" formControlName="lecturaMax" [disabled]="false" />
+                  <input nz-input id="Descripcion" type="number" placeholder="12200" formControlName="lecturaMax"  />
                 </nz-form-control>
               </nz-form-item>    
             </div>
 
           </div>
-          <div nzSpan="12" nz-col class="row7-col2">
+
+          <div nzOffset="2" nzSpan="11" nz-col class="row7-col2">
             <label>Punto de Conexion</label>
             <div nz-row>
               <nz-form-item  nzFlex>
                 <nz-form-control>
-                  <nz-radio-group >
-                    <label nz-radio formControlName="puntoMedicionId" [nzValue]="o.value" *ngFor="let o of options2">{{ o.label }}</label>
-                  </nz-radio-group>
+                  <nz-select class="inputMedium" formControlName="puntoConexion" nzPlaceHolder="Baja tension, media, alta" nzAllowClear>
+                        <nz-option nzLabel="Baja Tension" nzValue="0"></nz-option>
+                        <nz-option nzLabel="Media Tension" nzValue="1"></nz-option>
+                        <nz-option nzLabel="Alta Tension" nzValue="2"></nz-option>
+                  </nz-select>
                 </nz-form-control>
               </nz-form-item>
             </div>
@@ -143,7 +154,7 @@
             <div nz-row>
               <nz-form-item  nzFlex>
                 <nz-form-control>
-                  <input class="inputLarge" nz-input id="Multiplicador" type="number" placeholder="Medidor sin etiqueta" formControlName="multiplicador" [disabled]="false" />
+                  <input nz-input class="inputLarge" id="multiplicador" type="number" placeholder="Medidor sin etiqueta" formControlName="multiplicador"  />
                 </nz-form-control>
               </nz-form-item>
 
